--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "thegreytangennt",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^4.0.1",
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.9",
     "morgan": "^1.10.0"
