--- a/package.json
+++ b/package.json
@@ -13,8 +13,13 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.9",
-    "morgan": "^1.10.0"
+    "mongoose-title-case": "^0.1.1",
+    "mongoose-validator": "^2.1.0",
+    "morgan": "^1.10.0",
+    "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0"
   }
 }
